Remove href attributes to stop anchor jumping
Apparently my previous solution did not work at all. Thus, I simply
dropped the href attribute altogether. The alternative is data-target
and this works good.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -267,3 +267,7 @@ h3.heading-only {
   margin: 0em;
   text-align: center;
 }
+
+a[data-target] {
+  cursor: pointer;
+}
